--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
     width: 1440px;
 }
 
+ul, h3, p {
+    padding: 0px;
+    margin: 0px;
+}
+
 ul {
     list-style-type: none;
 }
@@ -22,6 +27,7 @@ header {
 
 .navigation {
     display: flex;
+    align-items: center;
 }
 
 .logo {
@@ -29,9 +35,10 @@ header {
     color: #4d5ae5;
     text-transform: uppercase;
     font-weight: 700;
+    font-size: 18px;
     letter-spacing: 0.03em;
     line-height: 1.6667;
-    display: inherit;
+    padding: 1.5px 0px;
 }
 
 .logo-header {
@@ -45,7 +52,7 @@ header {
 .navigation-menu {
     display: flex;
     height: 24px;
-    margin: 0px 332px 0px 36px;
+    margin: 0px 332px 0px 76px;
     gap: 40px;
 }
 
@@ -66,8 +73,6 @@ header {
     display: flex;
     height: 24px;
     gap: 40px;
-    margin: 0px;
-    padding: 0px;
 }
 
 .contacts-item {
@@ -123,8 +128,6 @@ header {
 .adventages-list {
     display: flex;
     gap: 24px;
-    padding: 0px;
-    margin: 0px;
 }
 
 .adventages-item {
@@ -138,14 +141,12 @@ header {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    margin: inherit;
     color: #2e2f42;
 }
 
 .adventages-item > p {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin: inherit;
 }
 
 .staff {
@@ -162,13 +163,12 @@ header {
     line-height: 1.11111;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-transform: capitalize;
 }
 
 .staff-list {
     display: flex;
     gap: 24px;
-    margin: 0px;
-    padding: 0px;
 }
 
 .staff-item {
@@ -191,7 +191,6 @@ header {
 }
 
 .staff-item h3 {
-    margin: 0px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -200,11 +199,73 @@ header {
 }
 
 .staff-item p {
-    margin: 0px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 
 .portfolio {
     padding: 120px 156px;
+}
+
+.portfolio-title {
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+    text-transform: capitalize;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+.portfolio-list-row {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.portfolio-item {
+    display: flex;
+    flex-direction: column;
+}
+
+.portfolio-item-content {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.portfolio-item-content > h3 {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
+
+.portfolio-item-content > p {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+footer {
+    padding: 100px 1020px 100px 156px;
+    background: #2e2f42;
+}
+
+.footer-text {
+    margin-top: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
 }
