--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,20 @@ body {
     width: 1440px;
 }
 
+h1, h2, h3 {
+    color: #2e2f42;
+    letter-spacing: 0.02em;
+}
+
+h3 {
+    line-height: 1.2;
+}
+
+p {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
 ul, h3, p {
     padding: 0px;
     margin: 0px;
@@ -16,6 +30,7 @@ ul {
 
 a {
     text-decoration: none;
+    letter-spacing: 0.02em;
 }
 
 header {
@@ -28,6 +43,8 @@ header {
 .navigation {
     display: flex;
     align-items: center;
+    padding: 0px;
+    margin: 0px;
 }
 
 .logo {
@@ -59,7 +76,6 @@ header {
 .navigation-item {
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.02em;
     color: #2e2f42
 }
 
@@ -77,7 +93,6 @@ header {
 
 .contacts-item {
     line-height: 1.5;
-    letter-spacing: 0.02em;
     color: inherit;
 }
 
@@ -93,7 +108,6 @@ header {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07143;
-    letter-spacing: 0.02em;
     text-align: center;
     color: #ffffff;
     padding-top: 188px;
@@ -139,14 +153,6 @@ header {
 
 .adventages-item > h3 {
     font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
-
-.adventages-item > p {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
 }
 
 .staff {
@@ -161,8 +167,6 @@ header {
     text-align: center;
     font-size: 36px;
     line-height: 1.11111;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
     text-transform: capitalize;
 }
 
@@ -193,14 +197,9 @@ header {
 .staff-item h3 {
     font-weight: 500;
     font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
 }
 
 .staff-item p {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
     text-transform: capitalize;
 }
 
@@ -211,8 +210,6 @@ header {
 .portfolio-title {
     font-size: 36px;
     line-height: 1.11111;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
     text-align: center;
     text-transform: capitalize;
 }
@@ -247,15 +244,7 @@ header {
 .portfolio-item-content > h3 {
     font-weight: 500;
     font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
     text-transform: capitalize;
-}
-
-.portfolio-item-content > p {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
 }
 
 footer {
@@ -265,7 +254,5 @@ footer {
 
 .footer-text {
     margin-top: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
     color: #f4f4fd;
 }
