Add navigation flags

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,10 @@ header {
     padding: 120px 156px;
 }
 
+.adventages-title {
+    display: none;
+}
+
 .adventages-list {
     display: flex;
     gap: 24px;
