--- a/css/style.css
+++ b/css/style.css
@@ -60,11 +60,6 @@ header {
     padding: 0 15px;
 }
 
-.header-container a {
-    padding-top: 25.5px;
-    padding-bottom: 25.5px;
-}
-
 .navigation {
     display: flex;
     align-items: center;
@@ -82,6 +77,9 @@ header {
     letter-spacing: 0.03em;
     line-height: 1.16667;
     padding: 1.5px 0;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    cursor: pointer;
 }
 
 .logo-header {
@@ -97,15 +95,34 @@ header {
     gap: 40px;
 }
 
-.navigation-item {
-    font-weight: 500;
-    line-height: 1.5;
-    color: #2e2f42
+.navigation-menu .active {
+    color: #404bbf;
 }
 
-.navigation-item:hover,
-.contacts-item:hover,
-.navigation-item:active {
+.navigation-item,
+.contacts-item {
+    position: relative;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    cursor: pointer;
+    color: #2e2f42;
+}
+
+.navigation-item-link {
+    font-weight: 500;
+    line-height: 1.5;
+    color: inherit;
+}
+
+.navigation-menu .active::after {
+    position: absolute;
+    bottom: 0;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
     color: #404bbf;
 }
 
@@ -115,13 +132,21 @@ header {
     align-items: center;
 }
 
-.contacts-item {
+.contacts-item-link {
     line-height: 1.5;
     color: inherit;
 }
 
+.navigation-item:hover .navigation-item-link,
+.contacts-item:hover .contacts-item-link {
+    color: #404bbf;
+}
+
 .banner {
-    background-color: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-size: cover;
+    max-width: 1440px;
+    margin: 0 auto;
     padding-top: 188px;
     padding-bottom: 188px;
 }
@@ -155,7 +180,7 @@ header {
 }
 
 .banner-button:hover {
-    line-height: normal;
+    background: #404bbf;
 }
 
 .banner-button:focus {
@@ -181,6 +206,17 @@ header {
     flex-direction: column;
     gap: 8px;
     flex-basis: calc((100% - 24px * 3) / 4);
+}
+
+.adventages-icon-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 23px;
+    padding-bottom: 23px;
+    background-color: #f4f4fd;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
 }
 
 .adventages-item > h3 {
@@ -211,25 +247,41 @@ header {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
         0 1px 1px 0 rgba(46, 47, 66, 0.16),
         0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
 }
 
 .staff-item-content {
-    padding-bottom: 32px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+    padding: 32px 16px;
 }
 
 .staff-item h3 {
     font-weight: 500;
     font-size: 20px;
+    margin-bottom: 8px;
 }
 
 .staff-item p {
     text-transform: capitalize;
+    margin-bottom: 8px;
+}
+
+.staff-social-list {
+    display: flex;
+    gap: 24px;
+}
+
+.staff-social-list-item {
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.staff-social-list-item:hover {
+    background-color: #404bbf;
 }
 
 .portfolio-title {
