--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,27 @@ header {
     flex-direction: column;
 }
 
+.image-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-description {
+    position:absolute;
+    top: 0;
+    left: 0;
+    background-color: #4d5ae5;
+    color: #f4f4fd;
+    font-size: 16px;
+    transform: translateY(100%);
+    height: 100%;
+    transition: transform 250ms ease-in-out;
+}
+
+.portfolio-item:hover .portfolio-description {
+    transform: translateY(0);
+}
+
 .portfolio-item-content {
     border-bottom: 1px solid #e7e9fc;
     border-left: 1px solid #e7e9fc;
