--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,6 @@ header {
 .header-container {
     display: flex;
     justify-content: space-between;
-    align-content: baseline;
-    padding: 0 15px;
 }
 
 .navigation {
@@ -76,9 +74,8 @@ header {
     font-size: 18px;
     letter-spacing: 0.03em;
     line-height: 1.16667;
-    padding: 1.5px 0;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-top: 25.5px;
+    padding-bottom: 25.5px;
     cursor: pointer;
 }
 
@@ -116,7 +113,7 @@ header {
 
 .navigation-menu .active::after {
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     display: block;
     content: "";
     width: 100%;
@@ -264,12 +261,12 @@ header {
     margin-bottom: 8px;
 }
 
-.staff-social-list {
+.social-list {
     display: flex;
     gap: 24px;
 }
 
-.staff-social-list-item {
+.social-list-item {
     background-color: #4d5ae5;
     border-radius: 50%;
     width: 40px;
@@ -280,7 +277,7 @@ header {
     cursor: pointer;
 }
 
-.staff-social-list-item:hover {
+.social-list-item:hover {
     background-color: #404bbf;
 }
 
@@ -319,6 +316,7 @@ header {
     transform: translateY(100%);
     height: 100%;
     transition: transform 250ms ease-in-out;
+    padding: 40px 32px;
 }
 
 .portfolio-item:hover .portfolio-description {
@@ -351,12 +349,32 @@ footer {
     padding-TOP: 100px;
 }
 
+.footer-container {
+    display: flex;
+    gap: 120px;
+    justify-content: flex-start;
+}
+
 footer .logo {
     display: block;
+    padding: 1.5px 0;
 }
 
 .footer-text {
     max-width: 264px;
     margin-top: 16px;
     color: #f4f4fd;
+}
+
+.social-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin: 0 0 16px;
+}
+
+.footer-container .social-list-item:hover {
+    background-color: #31d0aa;
 }
