--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ header {
     font-weight: 500;
     line-height: 1.5;
     color: inherit;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-menu .active::after {
@@ -132,6 +133,7 @@ header {
 .contacts-item-link {
     line-height: 1.5;
     color: inherit;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-item:hover .navigation-item-link,
@@ -167,21 +169,22 @@ header {
 .banner-button {
     border-radius: 4px;
     padding: 16px 32px;
-    background: #4d5ae5;
+    background-color: #4d5ae5;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
     border-style: none;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .banner-button:hover {
-    background: #404bbf;
+    background-color: #404bbf;
 }
 
 .banner-button:focus {
-    background: #404bbf;
+    background-color: #404bbf;
 }
 
 .section {
@@ -275,6 +278,7 @@ header {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-item:hover {
@@ -315,7 +319,7 @@ header {
     font-size: 16px;
     transform: translateY(100%);
     height: 100%;
-    transition: transform 250ms ease-in-out;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);;
     padding: 40px 32px;
 }
 
